error handling
ERRORS:errors are of 5 types :they are as follows.

1.syntax error:
name='sanjana'
print(name
----------------
ERROR!
Traceback (most recent call last):
  File "<main.py>", line 2
    print(name
         ^
SyntaxError: '(' was never closed

name='sanjana'
print(list.[name])
-------------
ERROR!
Traceback (most recent call last):
  File "<main.py>", line 2
    print(list.[name])
               ^
SyntaxError: invalid syntax


2.index error:occurs when out of range or element not found
name=['s','a','n',23,56]
print(name[6])
-----------------
ERROR!
Traceback (most recent call last):
  File "<main.py>", line 2, in <module>
IndexError: list index out of range

3.type error:occurs when we try to perform the operation on in incompatible data types.
name='san'
age=56
result=name+age
print(result)
--------------
ERROR!
Traceback (most recent call last):
  File "<main.py>", line 3, in <module>
TypeError: can only concatenate str (not "int") to str

4.attribute error:occurs when you try to use a method or property that doesn't exist for that data type.

name=56
print(name.append('san'))
--------------
ERROR!
Traceback (most recent call last):
  File "<main.py>", line 2, in <module>
AttributeError: 'int' object has no attribute 'append'

5.name error:occurs when variable is not defined or not found.
name=56
print(append.name('san'))
---------------
ERROR!
Traceback (most recent call last):
  File "<main.py>", line 2, in <module>
NameError: name 'append' is not defined


Debugging Techniques::
print/f-string:to check the flow of the code
pdb-python debugger:pdb.set_trace()
is used to trace as following 

import pdb

def divide(a, b):
    pdb.set_trace()
    return a / b

print(divide(10, 2))
-------------------------
/tmp/ipykernel_642/410373905.py(5)divide()
      3 def divide(a, b):
      4     pdb.set_trace()
----> 5     return a / b
      6 
      7 print(divide(10, 2))

ipdb> help

Documented commands (type help <topic>):
========================================
EOF    commands   enable    ll        pp       s                until 
a      condition  exit      longlist  psource  skip_hidden      up    
alias  cont       h         n         q        skip_predicates  w     
args   context    help      next      quit     source           whatis
b      continue   ignore    p         r        step             where 
break  d          interact  pdef      restart  tbreak         
bt     debug      j         pdoc      return   u              
c      disable    jump      pfile     retval   unalias        
cl     display    l         pinfo     run      undisplay      
clear  down       list      pinfo2    rv       unt            

Miscellaneous help topics:
==========================
exec  pdb

ipdb> whatis a
<class 'int'>
ipdb> whatis
*** SyntaxError: invalid syntax
ipdb> cont
5.0

IDE-integrated development environment:many break points  step execution, and variable inspection.
are used for debugging 







